--- a/src/docs/contributing.mdx
+++ b/src/docs/contributing.mdx
@@ -6,8 +6,9 @@ import { Meta, Markdown } from "@storybook/blocks"
 
 Contributing to this project is highly appreciated. We are happy to receive feedback, bug reports, feature requests, and pull requests.
 
-
+## TODOs
 - Custom Elements / Lit
+- Composition of components
 
 
 ## Create a new component
