--- a/src/docs/usage.mdx
+++ b/src/docs/usage.mdx
@@ -56,7 +56,7 @@ leu is therefore not usable with React versions below 19.
 
 Vue has full support for custom elements. Their [documentation](https://vuejs.org/guide/extras/web-components) explains how to set up a project so that custom elements are not resolved as vue components.
 
-## Code Completion
+## Code completion
 
 The leu package contains a file called `vscode.html-custom-data.json` that can be used to describe its custom elements to Visual Studio Code. This enables code completion for leu components. To enable it, you need to tell VS Code where the file is.
 
