--- a/src/docs/theme.mdx
+++ b/src/docs/theme.mdx
@@ -1,4 +1,4 @@
-import { Meta, Markdown, Canvas } from "@storybook/blocks"
+import { Meta, Markdown, Canvas } from "@storybook/addon-docs/blocks"
 import React from "react"
 
 import * as GridStories from "../styles/style.stories"
